# IAG_computer_use

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: trades.csv
docker/: Dockerfile.thick  README.md  compose.yaml  entrypoint.sh  java.policy  launch-client.sh
murex/: client.cmd  client.sh  client.xml  java.policy  setup-fileserver-tls.ps1
murex/certs/: IMXDEVBMRX02.cer  murexClientCertificate2025-10-15-16-16.cer
murex/jdk-17.0.18_linux-x64_bin/jdk-17.0.18/: release
murex/jdk-17.0.18_linux-x64_bin/jdk-17.0.18/jmods/: java.base.jmod  java.compiler.jmod  java.datatransfer.jmod  java.desktop.jmod  java.instrument.jmod  java.logging.jmod  java.management.jmod  java.management.rmi.jmod  java.naming.jmod  java.net.http.jmod  java.prefs.jmod  java.rmi.jmod  java.scripting.jmod  java.se.jmod  java.security.jgss.jmod  java.security.sasl.jmod  (+54 more)
murex/jdk-17.0.18_windows-x64_bin/jdk-17.0.18/: release
scripts/: debug_download.py  shotloop.sh
src/iag_sim/: __init__.py  aggregate.py  cli.py  config.py  diff.py  models.py  runlog.py  server.py
src/iag_sim/api/: __init__.py  app.py  artifacts.py  deps.py  run_manager.py  run_store.py  schemas.py  security.py  service.py
src/iag_sim/cua/: actions.py  anthropic_actions.py  anthropic_backend.py  backend.py  base.py  computer.py  loop.py  openai_backend.py  openai_custom_backend.py  trace.py
src/iag_sim/harness/: base.py  browser.py  docker.py
src/iag_sim/murex/: export_validate.py  login.py  simulate.py
src/iag_sim/orchestration/: graph.py  postprocess.py  resources.py  runner.py  state.py  worker.py
tests/: conftest.py  test_actions.py  test_aggregate.py  test_anthropic_actions.py  test_backend.py  test_browser_harness.py  test_computer.py  test_config.py  test_diff.py  test_docker_computer.py  test_export_validate.py  test_graph_build.py  test_graph_resume.py  test_openai_custom_backend.py  test_postprocess.py  test_runlog.py  test_simulate.py  test_trace.py  test_worker_retry.py
tests/api/: conftest.py  test_api.py  test_artifacts.py  test_run_persistence.py
(+124 files in other folders)
